[PRMT-1162] Added EHR Request ID to registration request endpoint
